--- a/src/features/scheduler/components/rotation/Rotation.module.css
+++ b/src/features/scheduler/components/rotation/Rotation.module.css
@@ -8,6 +8,10 @@
   gap: var(--box-spacing);
 }
 
+.rotationList > div:not(:last-child) {
+  margin-bottom: var(--box-spacing);
+}
+
 .rotationHeading {
   background: var(--branding-color);
   border-radius: var(--border-radius) var(--border-radius) 0 0;
