--- a/src/features/scheduler/components/rotation/Rotation.module.css
+++ b/src/features/scheduler/components/rotation/Rotation.module.css
@@ -1,14 +1,14 @@
 .rotation {
+  display: flex;
+  flex-basis: 50%;
+  flex-direction: column;
   flex-grow: 1;
   flex-shrink: 0;
-  flex-basis: 50%;
-  margin: 0 var(--box-spacing);;
-  display: flex;
-  flex-direction: column;
   gap: var(--box-spacing);
+  margin: 0 var(--box-spacing);
 }
 
-.rotationList > div:not(:last-child) {
+.rotationList>div:not(:last-child) {
   margin-bottom: var(--box-spacing);
 }
 
