--- a/src/features/scheduler/components/styles/Panel.module.css
+++ b/src/features/scheduler/components/styles/Panel.module.css
@@ -1,4 +1,4 @@
-.panel {
+.container {
   align-self: flex-start;
   background-color: #fff;
   box-shadow: var(--box-shadow);
@@ -10,25 +10,29 @@
   height: 80vh;
 }
 
-.panelHeading {
+.heading {
   background-color: var(--branding-color);
   border-radius: var(--border-radius) var(--border-radius) 0 0;
   color: #fff;
   text-align: center;
 }
 
-.panelHeading h2 {
+.heading h2 {
   letter-spacing: 1.25px;
   text-transform: uppercase;
 }
 
-.panelContainer {
+.list {
   mask-image: linear-gradient(to bottom, black calc(100% - 32px), transparent 100%);
   overflow: hidden;
   overflow-y: auto;
   padding: var(--box-spacing);
 }
 
-.panelContainer>div:not(:last-child) {
+.list>div:not(:last-child) {
   margin-bottom: var(--box-spacing);
+}
+
+.list>div:last-child {
+  margin-bottom: 32px;
 }
