--- a/src/features/scheduler/components/timeline/Timeline.module.css
+++ b/src/features/scheduler/components/timeline/Timeline.module.css
@@ -1,12 +1,9 @@
 .container {
-  background: #fff;
-  border-radius: var(--border-radius);
-  box-shadow: var(--box-shadow);
-  margin-top: var(--box-spacing);
+  margin: 0 var(--box-spacing) var(--box-spacing);
   padding: var(--box-spacing);
 }
 
-.Labels {
+.labels {
   display: flex;
   min-height: 24px;
 }
